renamed and update register page

--- a/relatorio/relatorio.html
+++ b/relatorio/relatorio.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <h1>esta é a tela principal</h1>
-    <p>quando o app for aberto vai aparecer um botão para cadastrar a 1ª conta <br>
-    depois aparecerão sempre a lista de contas a pagar que poderão ser mostradas por mês <br>
-    o usuário pode escolher ver somente as contas pagas ou somente as a pagar </p>
+    <p> se 1º cadastro: mostrar botão <br>
+        senão mostra lista de contas <br>
+        quando o app for aberto vai aparecer um botão para cadastrar a 1ª conta <br>
+        depois aparecerão sempre a lista de contas a pagar que poderão ser mostradas por mês <br>
+        o usuário pode escolher ver somente as contas pagas ou somente as a pagar </p>
 
 </body>
 </html>
