--- a/register/register.html
+++ b/register/register.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="registerStyle.css" />
     <title>Cadastro</title>
 </head>
 <body>
-    <form>
-        <div class="name">
-            <label for="expenseName">nome do gasto:</label>
-            <input type="text" placeholder="nome do gasto"/>
-        </div>
-        <div class="amount">
-            <label for="amount">valor a pagar:</label>
-            <input type="number" placeholder="valor a pagar"/>
-        </div>
-        <div class="dueDate">
-            <label for="dueDate">data de vencimento:</label>
-            <input type="datetime" placeholder="nome da conta"/>
-        </div>
-        <input type="button" value="cancela" />
-        <input type="submit" value="salva"/>
-    </form>
+    <div class="container">
+        <h1>cadastro</h1>
+        <form>
+            <div class="name">
+                <label for="expenseName">nome do gasto:</label>
+                <input type="text" placeholder="nome do gasto"/>
+            </div>
+            <div class="amount">
+                <label for="amount">valor a pagar:</label>
+                <input type="number" placeholder="valor a pagar"/>
+            </div>
+            <div class="dueDate">
+                <label for="dueDate">data de vencimento:</label>
+                <input type="datetime" placeholder="nome da conta"/>
+            </div>
+            <div class="button">
+                <input type="button" class="btn" value="cancela" />
+                <input type="submit" class="btn" value="salva"/>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
